navbar item text no longer wraps out of the navbar

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -91,6 +91,7 @@ nav {
   font-size: 1.4rem;
   color: $nav-link-color;
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .navitem p {
